--- a/src/components/TechStackElement/TechStackElement.module.scss
+++ b/src/components/TechStackElement/TechStackElement.module.scss
@@ -4,16 +4,17 @@
     height: 5vw;
     width: 5vw;
     border-radius: 50%;
-    border: .5px solid $grey-30p;
+    border: .5px solid $gray-30p;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: all .3s ease;
     margin-left: .2vw;
     margin-right: .2vw;
+    background-color: #fff;
     
     &:hover {
-        box-shadow: 0 0.5em 1em -0.125em $grey-30p, 0 0px 0 1px $grey-10p;
+        box-shadow: 0 0.5em 1em -0.125em $gray-30p, 0 0px 0 1px $gray-10p;
         transform: translate(0%, -5%);
     }
 }
