--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,10 +4,10 @@ $body-size: 20px !default;
 // Color system
 $blue:       #0057AE;
 $light-blue: #34AAE1;
-$grey:       #676767;
-$grey-30p:   rgba(103, 103, 103, .3);
-$grey-10p:   rgba(103, 103, 103, .1);
-$grey-2p:    rgba(103, 103, 103, .02);
+$gray:       #676767;
+$gray-30p:   rgba(103, 103, 103, .3);
+$gray-10p:   rgba(103, 103, 103, .1);
+$gray-5p:    rgba(103, 103, 103, .05);
 $red:        #FD7674;
 $green:      #25B486;
 
