--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,3 +37,7 @@
 html, body {
     font-family: $font-family-base;
 }
+
+.bg-gray-5p {
+  background-color: $gray-5p;
+}
